2009-04-03  Claudio Saavedra  <csaavedra@igalia.com>

	Based on a patch by Mox Soini (ext-mox.soini@nokia.com)

	* src/hildon-get-password-dialog.c
	(hildon_get_password_set_property),
	(hildon_get_password_get_property), (create_contents):
	* src/hildon-login-dialog-private.h:
	* src/hildon-login-dialog.c (hildon_login_dialog_set_property),
	(hildon_login_dialog_init), (hildon_login_dialog_get_username),
	(hildon_login_dialog_get_password):
	* src/hildon-set-password-dialog-private.h:
	* src/hildon-set-password-dialog.c
	(hildon_set_password_set_property),
	(hildon_set_password_get_property), (create_contents),
	(hildon_set_password_response_change),
	(hildon_set_password_response_set), (hildon_checkbox_toggled):

	Pimp these dialogs, to make them use HildonEntry and HildonCheckBox
	instead and look more Fremantle style.

	Fixes: NB#109639 (Update hildon passwd dialogs to Hildon 2.2)

2009-04-03  Alberto Garcia  <agarcia@igalia.com>

	* doc/hildon-sections.txt
	* src/hildon-window-stack.h
	* src/hildon-window-stack.c
	(+hildon_window_stack_get_windows):
	New API to obtain the list of windows on a stack.

2009-04-02  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-app-menu.c (hildon_app_menu_popup)
	(hildon_app_menu_class_init, -hildon_app_menu_show):
	Remove hildon_app_menu_show() and move all its checks to
	hildon_app_menu_popup()

2009-04-02  Alejandro Pinheiro  <apinheiro@igalia.com>

	* src/hildon-picker-dialog.c: removed HILDON_TOUCH_SELECTOR_HEIGHT
	(_hildon_picker_dialog_set_selector): removed call to
	gtk_widget_set_size_request
	* src/hildon-touch-selector.c
	(_create_new_column): change the pannable size request policy

	Avoid to use a hardcoded height for the hildon picker dialog. In order
	to get that, we needed to change the hildon pannable size request
	policy
	Fixes: NB#109369 (Hard-coded height in HildonPickerDialog)

2009-04-02  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-window.c (hildon_window_map): Check for vbox to be